--- a/First Notebook.ipynb
+++ b/First Notebook.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "source": [
     "DELETING VARIABLES\n",
-    "- # Use the del keyword to delete variables\n",
+    "- Use the del keyword to delete variables\n",
     "- syntax: del variable_name\n"
    ]
   },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -172,10 +172,10 @@
      "evalue": "name 'is_light_on' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(is_light_on)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'is_light_on' is not defined"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mis_light_on\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'is_light_on' is not defined"
      ]
     }
    ],
@@ -427,6 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "PRACTICE QUIZ\n",
     "1. Iterate through the list ['Python', 'Numpy', 'Pandas,'Django', 'Flask'] using a for loop and print out the items.\n",
     "2. Use for loop to iterate from 0 to 100 and print only even numbers.\n",
     "3. Use for loop to iterate from 0 to 100 and print only odd numbers."
@@ -459,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -471,6 +472,7 @@
     }
    ],
    "source": [
+    "# find even numbers from 0 to 100\n",
     "count = 0\n",
     "\n",
     "for number in range(101):\n",
@@ -481,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -493,10 +495,11 @@
     }
    ],
    "source": [
+    "# find odd numbers from 0 to 100\n",
     "count = 0\n",
     "\n",
     "for number in range(101):\n",
-    "    if number % 2!= 0:\n",
+    "    if number % 2 != 0:\n",
     "        print(number, end=' ')\n",
     "    count += 1"
    ]
