--- a/Kibet_Assignment.ipynb
+++ b/Kibet_Assignment.ipynb
@@ -8,17 +8,22 @@
     "1. What will be the output of the following code? x = -15\n",
     "print(abs(x) + pow(3, 2))\n",
     "2. Convert the number 45 to its binary and hexadecimal representations using Python functions.\n",
-    "3. What will be the output of the following? print(type(bin(25)))\n",
+    "3. What will be the output of the following? print(type(bin(25)))  \n",
+    "\n",
     "Float (float)\n",
     "1. What will be the output of the following code? num = 5.6789\n",
     "print(round(num, 1))\n",
     "2. Convert the string \"20.75\" into a float and add 5 to it.\n",
     "3. What is the difference between float(10) and int(10.5) in terms of output?\n",
+    "\n",
+    "\n",
     "String (str)\n",
     "1. Given s = \" Python Programming \", write a line of code to remove extra spaces and convert it to lowercase.\n",
     "2. What will be the output of the following? text = \"hello world\"\n",
     "print(text.replace(\"world\", \"Python\"))\n",
     "3. Write a Python expression to split \"apple,banana,grapes\" into a list of individual fruits.\n",
+    "\n",
+    "\n",
     "List (list)\n",
     "1. Given numbers = [3, 1, 4, 1, 5, 9], write a line of code to count how many times 1 appears in the list.\n",
     "2. What will be the output of the following? fruits = ['apple', 'banana', 'cherry']\n",
@@ -29,8 +34,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Integers\n",
+    "1. What will be the output of the following code? x = -15 print(abs(x) + pow(3, 2))\n",
+    "2. Convert the number 45 to its binary and hexadecimal representations using Python functions.\n",
+    "3. What will be the output of the following? print(type(bin(25)))  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +57,7 @@
     }
    ],
    "source": [
+    "# 1. What will be the output of the following code? x = -15 print(abs(x) + pow(3, 2))\n",
     "x =-15\n",
     "print(abs(x)+ pow(3,2))"
    ]
@@ -51,77 +67,316 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2. Convert the number 45 to its binary and hexadecimal representations using Python functions.\n",
+    "num = 45"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "ascii_num = ascii(45)\n",
+    "print(ascii_num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. What will be the output of the following? \n",
+    "# print(type(bin(25)))\n",
+    "print(type(bin(25)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Float\n",
+    "1. What will be the output of the following code? num = 5.6789\n",
+    "print(round(num, 1))\n",
+    "2. Convert the string \"20.75\" into a float and add 5 to it.\n",
+    "3. What is the difference between float(10) and int(10.5) in terms of output?"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. What will be the output of the following code? num = 5.6789\n",
+    "# print(round(num, 1))\n",
+    "num = 5.6789\n",
+    "print(round(num,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Convert the string \"20.75\" into a float and add 5 to it.\n",
+    "num = \"20.75\"\n",
+    "float(num)\n",
+    "print(float(num) + 5)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. What is the difference between float(10) and int(10.5) in terms of output?\n",
+    "print(float(10))\n",
+    "print(int(10.5))\n",
+    "\n",
+    "# The difference is that the output of float(10) has a decimal point while that of int(10.5) does not \n",
+    "# have a decimal point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "String\n",
+    "1. Given s = \" Python Programming \", write a line of code to remove extra spaces and convert it to lowercase.\n",
+    "2. What will be the output of the following? text = \"hello world\"\n",
+    "print(text.replace(\"world\", \"Python\"))\n",
+    "3. Write a Python expression to split \"apple,banana,grapes\" into a list of individual fruits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python programming'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. Given s = \" Python Programming \", write a line of code to remove extra spaces and convert it to lowercase.\n",
+    "s = \" Python Programming \"\n",
+    "s.strip().lower()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2. What will be the output of the following? text = \"hello world\" print(text.replace(\"world\", \"Python\"))\n",
+    "text = \"hello world\"\n",
+    "print(text.replace(\"world\", \"Python\")) # replaces the string 'world' with the string 'Python'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apples,banana,grapes']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. Write a Python expression to split \"apple,banana,grapes\" into a list of individual fruits.\n",
+    "fruits = \"apples,banana,grapes\"\n",
+    "fruits.split()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List (list)\n",
+    "1. Given numbers = [3, 1, 4, 1, 5, 9], write a line of code to count how many times 1 appears in the list.\n",
+    "2. What will be the output of the following? fruits = ['apple', 'banana', 'cherry']\n",
+    "fruits.append('mango')\n",
+    "fruits.remove('banana')\n",
+    "print(fruits)\n",
+    "3. Write a Python expression to sort marks = [78, 56, 89, 45] in ascending order."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1. Given numbers = [3, 1, 4, 1, 5, 9], write a line of code to count how many times 1 appears in the list.\n",
+    "numbers = [3,1,4,1,5,9]\n",
+    "numbers.count(1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. What will be the output of the following? fruits = ['apple', 'banana', 'cherry']\n",
+    "# fruits.append('mango')\n",
+    "# fruits.remove('banana')\n",
+    "# print(fruits)\n",
+    "fruits = ['apple', 'banana', 'cherry']\n",
+    "print(fruits)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry', 'mango']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits.append('mango')\n",
+    "print (fruits)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fruits.remove('banana')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'cherry', 'mango']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fruits)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45, 56, 78, 89]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Write a Python expression to sort marks = [78, 56, 89, 45] in ascending order.\n",
+    "marks = [78, 56, 89, 45]\n",
+    "marks.sort()\n",
+    "print(marks)"
+   ]
   },
   {
    "cell_type": "code",
