--- a/Kibet_Assignment.ipynb
+++ b/Kibet_Assignment.ipynb
@@ -31,30 +31,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2. Convert the number 45 to its binary and hexadecimal representations using Python functions.\n",
-    "num = 45"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45\n"
+      "0b101101\n",
+      "0x2d\n"
      ]
     }
    ],
    "source": [
-    "ascii_num = ascii(45)\n",
-    "print(ascii_num)\n"
+    "# 2. Convert the number 45 to its binary and hexadecimal representations using Python functions.\n",
+    "number = 45\n",
+    "\n",
+    "binary = bin(number)  \n",
+    "hexadecimal = hex(number)  \n",
+    "\n",
+    "print(binary)\n",
+    "print(hexadecimal)\n"
    ]
   },
   {
