--- a/Functions_and_Classes.ipynb
+++ b/Functions_and_Classes.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "FUNCTIONS\n",
+    "\n",
     "- len(), type(), print() are functions that take arguments\n",
     "\n",
     "DEFINING FUNCTIONS\n",
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -114,8 +115,8 @@
     }
    ],
    "source": [
-    "    div2 = profit/cost\n",
-    "    print(div2)"
+    "div2 = profit/cost\n",
+    "print(div2)"
    ]
   },
   {
@@ -448,18 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "check_season() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[103]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     15\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mInvalid month\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[43mcheck_season\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mJan\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: check_season() takes 0 positional arguments but 1 was given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autumn\n"
      ]
     }
    ],
@@ -472,28 +469,19 @@
     "    Winter = [\"Apr\", \"May\", \"Jun\"]\n",
     "    Spring = [\"Jul\", \"Aug\", \"Sep\"]\n",
     "    Summer = [\"Oct\", \"Nov\", \"Dec\"]\n",
-    "    if month in Autumn:\n",
-    "        print(\"Autumn\")\n",
-    "    elif month in Winter:\n",
-    "        print(\"Winter\")\n",
-    "    elif month in Spring:\n",
-    "        print(\"Spring\")\n",
-    "    elif month in Summer:\n",
-    "        print(\"Summer\")\n",
-    "    else:\n",
-    "        print(\"Invalid month\")\n",
+    "month = input('Enter month: ')\n",
+    "if month in Autumn:\n",
+    "    print(\"Autumn\")\n",
+    "elif month in Winter:\n",
+    "    print(\"Winter\")\n",
+    "elif month in Spring:\n",
+    "    print(\"Spring\")\n",
+    "elif month in Summer:\n",
+    "    print(\"Summer\")\n",
+    "else:\n",
+    "    print(\"Invalid month\")\n",
     "\n",
-    "check_season(\"Jan\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def check_season2():\n",
-    "    "
+    "check_season()"
    ]
   },
   {
@@ -584,6 +572,404 @@
     "print_list=print_list(cars_yard)\n",
     "print_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Heyy:)!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function that returns a greeting\n",
+    "def greet():\n",
+    "    print('Heyy:)!')\n",
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of multiplication =  6000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 2000\n",
+    "b = 3\n",
+    "def multi_add():\n",
+    "    multi = a * b\n",
+    "    print(\"Value of multiplication = \", multi)\n",
+    "    return multi\n",
+    "\n",
+    "    addi = a + b\n",
+    "    print(\"Value of addition = \",addi)\n",
+    "    return addi\n",
+    "multi_add()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "666.6666666666666"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def division():\n",
+    "    return a/b\n",
+    "division()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My name is Ezra and I am 24 years young :)'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def age_name(name, age):\n",
+    "    return f\"My name is {name} and I am {age} years young :)\"\n",
+    "age_name('Ezra', 24)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "R = 45000\n",
+    "C = 30000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def profit(R,C):\n",
+    "    return f'Hello customer, your profit is: {R - C}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello customer, your profit is: 15000'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "profit(R,C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello customer, your profit is: 15000'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R = 45000\n",
+    "C = 30000\n",
+    "def profit(R,C):\n",
+    "    return f'Hello customer, your profit is: {R - C}'\n",
+    "profit(R,C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lambda Functions\n",
+    "- Lambda functions are anonymous, single-expression functions.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# square using lambda function\n",
+    "x = 4\n",
+    "y = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square = lambda y: x * x\n",
+    "square(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square = lambda x,y: x-y\n",
+    "square(6,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_age = lambda name, age: f\"Your name is {name} and my age-mate is (age) years old!\"\n",
+    "name = input(\"Enter name: \")\n",
+    "age = int(input(\"Enter age: \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Your name is Grace and my age-mate is (age) years old!'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name_age(name, age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recursive Functions\n",
+    "- is a function that calls itself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "720"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return n * factorial(n-1)\n",
+    "factorial(6) # 1*2*3*4*5*6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function Annotations\n",
+    "- allow us to specify types for function parameters and return values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def prof_calc(revenue: float, cost: float) -> float:\n",
+    "    return revenue - cost\n",
+    "prof_calc(6000.34,484.34)\n",
+    "type(prof_calc(6000.34,484.34))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5516.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prof_calc(6000.34,484.34)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
