--- a/Functions_and_Classes.ipynb
+++ b/Functions_and_Classes.ipynb
@@ -916,74 +916,454 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "LIST COMPREHENSION\n",
+    "- faster way of printing out the items in a list\n",
+    "> syntax:\n",
+    "--- i for i in an iterable if expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'mangoes', 'tomatoes']\n",
+      "['apple', 'mangoes', 'tomatoes']\n",
+      "['apple', 'mangoes', 'tomatoes']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['apple', 'mangoes','tomatoes']\n",
+    "for fruit in fruits:\n",
+    "    print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['P', 'y', 't', 'h', 'o', 'n']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# change a string to a list of characters\n",
+    "language = 'Python'\n",
+    "lst = list(language)\n",
+    "lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# gen a list of numbers\n",
+    "numbers = [ n for n in range(0,11)]\n",
+    "numbers"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get squares of numbers\n",
+    "# squares = number ** 2\n",
+    "numbers = [n * n for n in range(0,11)]\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0),\n",
+       " (1, 1),\n",
+       " (2, 4),\n",
+       " (3, 9),\n",
+       " (4, 16),\n",
+       " (5, 25),\n",
+       " (6, 36),\n",
+       " (7, 49),\n",
+       " (8, 64),\n",
+       " (9, 81),\n",
+       " (10, 100)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get squares and store them in a tuple\n",
+    "numbers = [(n,n * n) for n in range(0,11)]\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get sum of numbers\n",
+    "numbers = [ n + n for n in range(0,11)]\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LIST COMPREHENSION WITH IF STATEMENT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even = [ i for i in range(21) if i % 2 == 0]\n",
+    "even"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd = [i for i in range (21) if i % 2 != 0]\n",
+    "odd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# \n",
+    "nums = [-8,-5,-2,1,4,7]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "positive_nums = [ i for i in nums if i % 2 == 0 and i > 0]\n",
+    "positive_nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-5]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "negative_nums = [ i for i in nums if i % 2 != 0 and i < 0]\n",
+    "negative_nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_list = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "list_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 20, 30, 40, 50, 60, 70, 80, 90]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flat_list = [ number * 10 for row in list_list for number in row]\n",
+    "flat_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Kenya', 'Uganda', 'Tanzania', 'Rwanda', 'Burundi']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries = [ 'Kenya','uganda', 'tanzania','Rwanda','burundi']\n",
+    "countries_1 = [ words.capitalize() for words in countries]\n",
+    "countries_1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-4, -3, -2, -1, 0]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# \n",
+    "num_list = [ -4,-3,-2,-1,0,2,4,6]\n",
+    "neg_zero =[i for i in num_list if i <= 0]\n",
+    "neg_zero"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_lists = [[[1,2,3]],[[4,5,6]],[[7,8,9]]]\n",
+    "flatten_list = [number for sublist1 in list_of_lists for sublist2 in sublist1 for number in sublist2]\n",
+    "flatten_list"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 1, 0, 0, 0, 0, 0),\n",
+       " (1, 1, 1, 1, 1, 1, 1),\n",
+       " (2, 1, 2, 4, 8, 16, 32),\n",
+       " (3, 1, 3, 9, 27, 81, 243),\n",
+       " (4, 1, 4, 16, 64, 256, 1024),\n",
+       " (5, 1, 5, 25, 125, 625, 3125),\n",
+       " (6, 1, 6, 36, 216, 1296, 7776),\n",
+       " (7, 1, 7, 49, 343, 2401, 16807),\n",
+       " (8, 1, 8, 64, 512, 4096, 32768),\n",
+       " (9, 1, 9, 81, 729, 6561, 59049),\n",
+       " (10, 1, 10, 100, 1000, 10000, 100000)]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values = [(0, 1, 0, 0, 0, 0, 0), (1, 1, 1, 1, 1, 1, 1), (2, 1, 2, 4, 8, 16, 32), (3, 1, 3, 9, 27, 81, 243), (4, 1, 4, 16, 64, 256, 1024), (5, 1, 5, 25, 125, 625, 3125), (6, 1, 6, 36, 216, 1296, 7776), (7, 1, 7, 49, 343, 2401, 16807), (8, 1, 8, 64, 512, 4096, 32768), (9, 1, 9, 81, 729, 6561, 59049), (10, 1, 10, 100, 1000, 10000, 100000)]\n",
+    "tuples= [(i,1,i,i**2,i**3,i**4,i**5)for i in range(11)]\n",
+    "tuples"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries = [[('Finland', 'Helsinki')], [('Sweden', 'Stockholm')], [('Norway', 'Oslo')]]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['FINLAND', 'FIN', 'HELSINKI'],\n",
+       " ['SWEDEN', 'SWE', 'STOCKHOLM'],\n",
+       " ['NORWAY', 'NOR', 'OSLO']]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flattened_list=[[country.upper(), country[:3].upper(), capital.upper()] for row in countries for country, capital in row]\n",
+    "flattened_list\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'country': 'FINLAND', 'city': 'HELSINKI'},\n",
+       " {'country': 'SWEDEN', 'city': 'STOCKHOLM'},\n",
+       " {'country': 'NORWAY', 'city': 'OSLO'}]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_countries = [{'country': country.upper(), 'city': city.upper()} for [(country, city)] in countries]\n",
+    "dict_countries"
+   ]
   },
   {
    "cell_type": "code",
