--- a/Functions_and_Classes.ipynb
+++ b/Functions_and_Classes.ipynb
@@ -1367,10 +1367,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total earnings =  1625\n"
+     ]
+    }
+   ],
+   "source": [
+    "hours = int(input('Provide the number of hours worked in a month: '))\n",
+    "hourly_rate = 10\n",
+    "overtime = 15\n",
+    "if hours <= 160:\n",
+    "  print('Total earnings = ', hours * hourly_rate)\n",
+    "elif hours > 160:\n",
+    "  print('Total earnings = ', ((hours * hourly_rate) + ((hours-160) * (overtime))))\n",
+    "else:\n",
+    "  print('Invalid')\n",
+    "  print(hours)"
+   ]
   }
  ],
  "metadata": {
