--- a/Functions_and_Classes.ipynb
+++ b/Functions_and_Classes.ipynb
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,14 +1367,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total earnings =  1625\n"
+      "Total earnings =  1615\n"
      ]
     }
    ],
@@ -1385,7 +1385,7 @@
     "if hours <= 160:\n",
     "  print('Total earnings = ', hours * hourly_rate)\n",
     "elif hours > 160:\n",
-    "  print('Total earnings = ', ((hours * hourly_rate) + ((hours-160) * (overtime))))\n",
+    "  print('Total earnings = ', ((160 * hourly_rate) + ((hours-160) * (overtime))))\n",
     "else:\n",
     "  print('Invalid')\n",
     "  print(hours)"
